--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dcs (0.1-1) unstable; urgency=low
+dcs (1.0) unstable; urgency=low
 
   * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
 
